[gd_scene load_steps=4 format=2]

[ext_resource path="res://mobs/scripts/Bullet.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="SphereMesh" id=1]

[node name="Bullet" type="Area" groups=["projectiles"]]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = null

[node name="DeleteTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
